--- a/index.html
+++ b/index.html
@@ -41,6 +41,39 @@
                     <img src="images/museu.png" alt="museu">
                 </section>
 
+                <section id="postagens">
+                    <article id="video">
+                        <h3>Conheça o Museu</h3>
+                        <iframe width="310" height="170" src="https://www.youtube.com/embed/RGUYb-hivrc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </article>
+
+                    <article id="mapa">
+                        <h3>Mapa: Ecnontre o Museu</h3>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.206445593935!2d-43.2287175845196!3d-22.905755043593935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997e58a085b7af%3A0x4d11e9a933d38ce3!2sMuseu%20Nacional%20-%20UFRJ!5e0!3m2!1spt-BR!2sbr!4v1655814614020!5m2!1spt-BR!2sbr" width="310" height="170" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </article>
+
+                    <article id="exposicoes">
+                        <h3>Exposições</h3>
+                        <ul>
+                            <li><a href="">Os assustadores insetos</a></li>
+                            <li><a href="">O crânio de Luiza, a mulher mais antiga do Brasil</a></li>
+                            <li><a href="">Preguiça gigante e tigre-dentes-de-sabre</a></li>
+                            <li><a href="">Plantas do Brasil Central</a></li>
+                            <li><a href="">Teresa Cristina: A Imperatriz Arqueólaga</a></li>
+                            <li><a href="">Arte com Dinossauros - Paleoarte</a></li>
+                            <li><a href=""><strong>Veja todos (65)</strong></a></li>
+                        </ul>
+                    </article>
+
+                    <article id="historia">
+                        <h3>200 Anos de História</h3>
+                        <p>
+                            Numa ponta que avança sobre o mar, posteriormente conheciada como Ponta do Calabouço, entre as praias de Piaçaba e Santa Luiza, no centro histórico do Rio de Janeiro, os portugueses construíram em 1630 a Fortalezaq de Santiago, origem do conjunto arquitetônico que hoje abreiga o Museu Histórco Nacional.
+                        </p>
+                        <a href=""><strong>Leia mias</strong></a>
+                    </article>
+                </section>
+
             </div><!--Fim /Conteúdo Principal-->
 
             <aside><!--Início Barra Lateral-->
@@ -81,7 +114,24 @@
                     </a>
                 </section>
             </aside><!--Fim /Conteúdo Principal-->
+
+            <footer><!--Início footer-->
+                <p>
+                    <a href="">Home</a>
+                    <a href="">Exposições</a>
+                    <a href="">Pesquisa</a>
+                    <a href="">Acervo</a>
+                    <a href="">Vídeos</a>
+                    <a href="">Fotos</a>
+                    <a href="">Contato</a>
+                </p>
+                <p>
+                    2019 <a href="">Museu Internacional</a> - Todos os direitos reservados.
+                </p>
+            </footer><!--Fil /footer-->
         </div><!--Fim /Conteúdo-->
+
+
     </div><!--Fim /Container-->
 </body>
 </html>
